--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@next/third-parties": "15.1.2",
+    "@next/third-parties": "15.1.3",
     "age-calculator": "^1.0.0",
+    "firebase": "^11.1.0",
+    "firebase-tools": "^13.29.1",
     "framer-motion": "^11.15.0",
     "heroicons": "^2.2.0",
-    "next": "15.1.2",
+    "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0"
@@ -26,7 +28,7 @@
     "@types/react-dom": "19.0.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
-    "eslint-config-next": "15.1.2",
+    "eslint-config-next": "15.1.3",
     "postcss": "^8.4.49",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
