--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@heroicons/react": "^2.2.0",
     "@next/third-parties": "15.1.3",
     "age-calculator": "^1.0.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
     "firebase-tools": "^13.29.1",
     "framer-motion": "^11.15.0",
+    "gray-matter": "^4.0.3",
     "heroicons": "^2.2.0",
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.5",
