--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@next/third-parties": "15.1.3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "age-calculator": "^1.0.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
@@ -33,6 +36,7 @@
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.23",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.1.3",
     "postcss": "^8.4.49",
