--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@next/third-parties": "15.1.3",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/cli": "4.0.0-beta.9",
+    "@tailwindcss/postcss": "4.0.0-beta.8",
     "age-calculator": "^1.0.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.1.0",
@@ -36,13 +35,13 @@
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.23",
+    "daisyui": "5.0.0-beta.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.1.3",
     "postcss": "^8.4.49",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "4.0.0-beta.9",
     "typescript": "^5.7.2"
   },
   "pnpm": {
