--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev --turbopack",
     "format": "npx prettier . --write",
     "lint": "next lint",
+    "lint:fix": "eslint . --fix",
     "start": "next start"
   },
   "dependencies": {
@@ -31,12 +32,13 @@
     "remark-html": "^16.0.1"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
     "@types/node": "^22.10.7",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "^10.4.20",
     "daisyui": "5.0.0-beta.1",
-    "eslint": "^9.18.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.1.4",
     "postcss": "^8.5.1",
     "prettier": "3.3.3",
